changed the second slide of the carousel

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div id="brand">
             <h1 class="reset">
               <a href="/">
-                <img src="img/logo.svg" id="default-logo" alt="EventCenter">
+                <img src="img/logo-alt.svg" id="default-logo" alt="EventCenter">
               </a>
             </h1>
           </div><!-- brand -->
@@ -64,11 +64,11 @@
               </div><!-- intro-mockup -->             
             </div><!-- intro-mockup-wrapper -->
           </div>          
-          <div class="intro-item" style="background-color: #70767C;">
+          <div class="intro-item" style="background-image: url(img/seats.jpg);">
             <div class="intro-mockup-wrapper">            
               <div class="caption-mockup">
-                <h2>All the features you need</h2>
-                <p>Schedule, news, maps and more</p>
+                <h2>Schedule, news & maps</h2>
+                <p>We give you all the features you need for a superb event</p>
               </div><!-- caption -->  
               <div class="intro-mockup">
                 <img src="http://placehold.it/1193x937/ddd/fff&text=Beetle%20image" alt="">
@@ -143,7 +143,7 @@
           </div>  
         </section>          
 
-        <section class="row section text-light" style="background-color:#4FCEAD;">
+        <section class="row section text-light" style="background-color:#EA0F58;">
           <div class="row-content buffer even clear-after">
             <div class="slogan animation">
               <h2>This is an awesome heading slogan!</h2> 
