added some content

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <main role="main">
       <div id="intro-wrap">
-        <div id="intro" class="preload" data-autoplay="5000" data-navigation="true" data-pagination="true" data-transition="fade">  
+        <div id="intro" class="preload" data-autoplay="8000" data-navigation="true" data-pagination="true" data-transition="fadeUp">  
           <div class="intro-item" style="background-image: url(img/dark-concert.jpg);">   
             <div class="intro-mockup-wrapper">    
               <div class="caption-mockup caption-right column six last-special">
@@ -57,7 +57,7 @@
                 <p>
                   Custom designed, on every device. Offer the best mobile experience for your audience! 
                 </p>
-                <a class="button white transparent" href="#">Read More</a>
+                <a class="button white transparent" href="#feature-list">Read More</a>
               </div><!-- caption -->
               <div class="intro-mockup intro-left column six">
                 <img src="/img/single-track.png" alt="">
@@ -71,7 +71,7 @@
                 <p>We give you all the features you need for a superb event</p>
               </div><!-- caption -->  
               <div class="intro-mockup">
-                <img src="http://placehold.it/1193x937/ddd/fff&text=Beetle%20image" alt="">
+                <img src="/img/map-tablet.png" alt="">
               </div><!-- intro-mockup --> 
             </div><!-- intro-mockup-wrapper -->                   
           </div>
@@ -80,44 +80,54 @@
 
       <div id="main">
 
-        <section class="row section">
+        <section class="row section text-light greyish" id="feature-list" style="background-color:#a80055;">
           <div class="row-content buffer even clear-after">
+            <div class="column four centertxt">
+              <div class="big-icon red"><i class="icon icon-news"></i></div>
+              <div class="big-icon-text clear-after">
+                <h4>News</h4>
+                <p class="text-s">
+                  We do the research, produce the videos and shoot the images that give your event a lasting presence.
+                </p>
+                <a class="button transparent white" href="#">Read more</a>
+              </div>
+            </div>
             <div class="column four centertxt">
               <div class="big-icon red"><i class="icon icon-calendar"></i></div>
               <div class="big-icon-text clear-after">
                 <h4>Schedule</h4>
-                <p class="text-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-s">
+                  We give you the perfect schedule with special designs for multi-day and multi-location events and tons of delightful features for your attendees.
+                </p>
+                <a class="button transparent white" href="#">Read more</a>
               </div>
             </div>
-            <div class="column four centertxt">
+            <div class="column four last centertxt">
               <div class="big-icon red"><i class="fa fa-map-marker"></i></div>
               <div class="big-icon-text clear-after">
                 <h4>Maps</h4>
-                <p class="text-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="text-s">
+                  Show your audience where everything <em>really is</em>. Indoor and outdoor maps with geolocation and all you expect from a modern map.
+                </p>
+                <a class="button transparent white" href="#">Read more</a>
               </div>
             </div>            
-            <div class="column four last centertxt">
-              <div class="big-icon red"><i class="icon icon-news"></i></div>
-              <div class="big-icon-text clear-after">
-                <h4>News</h4>
-                <p class="text-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              </div>
-            </div
           </div>
         </section>  
 
-        <section class="row section">
+        <section class="row section" style="background-color:#FFF;">
           <div class="row-content buffer even clear-after"> 
             <div class="column six">
-              <h2>Mobile App</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><em>- Courtesy of <a href="http://dribbble.com/sok" target="_blank">Simeon K.</a>.</em></p>
-              <a class="button transparent aqua" href="#">Explore</a>
+              <h2>All the content you need</h2>
+              <p>We help you plan, write and shoot all the content you need to stand out and give your event the audience it deserves. Contact us when you need help with branding, article writing, video & photography and online & offline marketing.</p>
+              <a class="button transparent red" href="#">Contact us</a>
             </div>
             <div class="side-mockup right-mockup animation">
-              <div class="slider ipad-slider grey" data-autoplay="false">
+              <div class="slider desktop-slider" data-autoplay="false">
                 <figure>
-                  <div><img src="http://placehold.it/1008x756/ddd/fff&text=Beetle%20image" alt=""></div>
+                  <div>
+                    <video src="/video/demo.mp4" autoplay controls style="width:100%; background: #000;"></video>
+                  </div>
                 </figure>
               </div>
             </div>
@@ -127,13 +137,18 @@
         <section class="row section">
           <div class="row-content buffer even clear-after"> 
             <div class="column six push-six last-special">
-              <h2>Landing page</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <p><em>- Courtesy of <a href="http://dribbble.com/sok" target="_blank">Simeon K.</a>.</em></p>
-              <a class="button transparent aqua" href="#">Explore</a>
+              <h2>The perfect schedule</h2>
+              <p>
+                We understand every event is unique, and we have taken our time to carefully design different schedules for every type of event.
+              </p>
+
+              <p>
+                It doesn't matter if your event has multiple locations across the globe or lasts anytime between 1 hour and a whole year.
+              </p>
+              <a class="button transparent aqua" href="#">Get yours now</a>
             </div>              
             <div class="side-mockup left-mockup animation">
-              <div class="slider desktop-slider" data-autoplay="3000">
+              <div class="slider iphone-slider black" data-autoplay="3000">
                 <figure>
                   <div><img src="http://placehold.it/1148x630/ddd/fff&text=Beetle%20image" alt=""></div>
                   <div><img src="http://placehold.it/1148x630/ddd/fff&text=Beetle%20image" alt=""></div>
