added schedule images

--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
 
       <div id="main">
 
-        <section class="row section text-light greyish" id="feature-list" style="background-color:#a80055;">
+        <section class="row section text-light greyish" id="feature-list" style="background-color:#4256DD;">
           <div class="row-content buffer even clear-after">
             <div class="column four centertxt">
               <div class="big-icon red"><i class="icon icon-news"></i></div>
               <div class="big-icon-text clear-after">
                 <h4>News</h4>
                 <p class="text-s">
-                  We do the research, produce the videos and shoot the images that give your event a lasting presence.
+                  We do the research, produce the videos and shoot the images that give your event a lasting presence both on the Internet and the offline world.
                 </p>
-                <a class="button transparent white" href="#">Read more</a>
+                <a class="button transparent white" href="#content-info">Read more</a>
               </div>
             </div>
             <div class="column four centertxt">
@@ -99,7 +99,7 @@
                 <p class="text-s">
                   We give you the perfect schedule with special designs for multi-day and multi-location events and tons of delightful features for your attendees.
                 </p>
-                <a class="button transparent white" href="#">Read more</a>
+                <a class="button transparent white" href="#schedule-info">Read more</a>
               </div>
             </div>
             <div class="column four last centertxt">
@@ -115,12 +115,12 @@
           </div>
         </section>  
 
-        <section class="row section" style="background-color:#FFF;">
+        <section class="row section" style="background-color:#FFF;" id="content-info">
           <div class="row-content buffer even clear-after"> 
             <div class="column six">
               <h2>All the content you need</h2>
               <p>We help you plan, write and shoot all the content you need to stand out and give your event the audience it deserves. Contact us when you need help with branding, article writing, video & photography and online & offline marketing.</p>
-              <a class="button transparent red" href="#">Contact us</a>
+              <a class="button transparent red" href="/contact.html">Contact us</a>
             </div>
             <div class="side-mockup right-mockup animation">
               <div class="slider desktop-slider" data-autoplay="false">
@@ -134,7 +134,7 @@
           </div>  
         </section>  
 
-        <section class="row section">
+        <section class="row section" id="schedule-info" style="background: #FFF;">
           <div class="row-content buffer even clear-after"> 
             <div class="column six push-six last-special">
               <h2>The perfect schedule</h2>
@@ -143,43 +143,31 @@
               </p>
 
               <p>
-                It doesn't matter if your event has multiple locations across the globe or lasts anytime between 1 hour and a whole year.
+                It doesn't matter if your event has multiple locations across the globe or lasts anytime between 1 hour and a whole year, we will present your event perfectly.
               </p>
-              <a class="button transparent aqua" href="#">Get yours now</a>
+              <a class="button transparent aqua" href="/contact.html">Get yours now</a>
             </div>              
             <div class="side-mockup left-mockup animation">
-              <div class="slider iphone-slider black" data-autoplay="3000">
+              <div class="slider iphone-slider black" data-autoplay="5000">
                 <figure>
-                  <div><img src="http://placehold.it/1148x630/ddd/fff&text=Beetle%20image" alt=""></div>
-                  <div><img src="http://placehold.it/1148x630/ddd/fff&text=Beetle%20image" alt=""></div>
+                  <div><img src="/img/schedule-1.png" alt=""></div>
+                  <div><img src="/img/schedule-2.png" alt=""></div>
+                  <div><img src="/img/schedule-3.png" alt=""></div>
                 </figure>
               </div>
             </div>          
           </div>  
-        </section>          
+        </section>
 
-        <section class="row section text-light" style="background-color:#EA0F58;">
-          <div class="row-content buffer even clear-after">
-            <div class="slogan animation">
-              <h2>This is an awesome heading slogan!</h2> 
-              <p>Here you can type a subtitle.</p>            
-            </div><!-- slogan -->       
-          </div>
-        </section>  
+        <section class="row section" id="map-info">
+          <div class="map" data-maplat="4.657881" data-maplon="-74.091818" data-mapzoom="15" data-color="red" data-height="33.333" data-img="img/marker.png" data-info="You are here."></div>
+        </section>
 
-        <section class="row section">
-          <div class="row-content buffer even clear-after">         
-            <div class="slider iphone-slider grey" data-autoplay="3000">
-              <figure>
-                <div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-                <div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-                <div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-                <div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-                <div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-                <div><img src="http://placehold.it/640x1136/ddd/fff&text=Beetle%20image" alt=""></div>
-              </figure>
-            </div>
-          </div>  
+        <section class="row section text-light" style="background: #a80055">
+          <div class="slogan animation">
+            <h2>Maps. Real maps.</h2> 
+            <p>Stop using static images that nobody understands. Help your attendees navigate their way around your venues with ease with the featured you'd expect from a modern map: driving directions, zoom-in/zoom-out, geolocation and more.</p>
+          </div><!-- slogan -->
         </section>
       </div><!-- id-main -->
     </main><!-- main -->
