--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,9 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta name="description" content="The Page Description">
-		<style type="text/css">@-ms-viewport{width: device-width;}</style>
-		<title>Beetle - Contact</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="DESCRIPCION SEO AQUI">
+		<title>EventCenter - Contact Us</title>
 		<link rel="stylesheet" href="css/layers.min.css" media="screen">
 		<link rel="stylesheet" href="css/font-awesome.min.css" media="screen"> 
 		<link rel="stylesheet" href="css/style.css" media="screen">
@@ -30,6 +29,7 @@
             <h1 class="reset">
               <a href="/">
                 <img src="img/logo-alt.svg" id="default-logo" alt="EventCenter">
+                <img src="img/logo.svg" id="alt-logo" alt="EventCenter">
               </a>
             </h1>
           </div><!-- brand -->
@@ -51,7 +51,7 @@
 		<main role="main">
       <div id="intro-wrap" data-height="22.222">
         <div id="intro" class="preload-darken">          
-          <div class="intro-item" style="background-image: url(img/.jpg);">
+          <div class="intro-item" style="background-image: url(img/contact.jpg);">
             <div class="caption" style="top: 174px;">
               <h2>Contact us</h2>
             </div><!-- caption -->  
@@ -92,9 +92,9 @@
 							<div class="widget">
 								<h4>Poke us or @mention us</h4>
 								<ul class="inline meta-social">
-									<li><a href="#" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
-									<li><a href="#" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
-									<li><a href="#" class="pinterest-share border-box"><i class="fa fa-pinterest fa-lg"></i></a></li>
+									<li><a href="https://twitter.com/eventcenterco" target="_blank" class="twitter-share border-box"><i class="fa fa-twitter fa-lg"></i></a></li>
+									<li><a href="https://www.facebook.com/EventCenterCo" target="_blank" class="facebook-share border-box"><i class="fa fa-facebook fa-lg"></i></a></li>
+									<li><a href="#" target="_blank" class="pinterest-share border-box"><i class="fa fa-pinterest fa-lg"></i></a></li>
 								</ul>
 							</div>								
 						</div>
