--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <h1 class="reset">
               <a href="/">
                 <img src="img/logo-alt.svg" id="default-logo" alt="EventCenter">
+                <img src="img/logo.svg" id="alt-logo" alt="EventCenter">
               </a>
             </h1>
           </div><!-- brand -->
@@ -160,13 +161,13 @@
         </section>
 
         <section class="row section" id="map-info">
-          <div class="map" data-maplat="4.657881" data-maplon="-74.091818" data-mapzoom="15" data-color="red" data-height="33.333" data-img="img/marker.png" data-info="You are here."></div>
+          <div class="map" data-maplat="4.657881" data-maplon="-74.091818" data-mapzoom="15" data-color="red" data-height="33.333" data-img="img/marker.png" data-info="We're here."></div>
         </section>
 
         <section class="row section text-light" style="background: #a80055">
           <div class="slogan animation">
             <h2>Maps. Real maps.</h2> 
-            <p>Stop using static images that nobody understands. Help your attendees navigate their way around your venues with ease with the featured you'd expect from a modern map: driving directions, zoom-in/zoom-out, geolocation and more.</p>
+            <p>Stop using static images that nobody understands. Help your attendees navigate their way around your venues with ease with the features you'd expect from a modern map: driving directions, zoom-in/zoom-out, geolocation and more.</p>
           </div><!-- slogan -->
         </section>
       </div><!-- id-main -->
