--- a/en/contact.html
+++ b/en/contact.html
@@ -13,7 +13,7 @@
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
-		<link rel="icon" href="favicon.ico">
+		<link rel="icon" href="../favicon.ico">
 		<link rel="apple-touch-icon" href="../img/apple-touch-icon.png">
 		<link rel="apple-touch-icon" sizes="76x76" href="../img/apple-touch-icon-76x76.png">
 		<link rel="apple-touch-icon" sizes="120x120" href="../img/apple-touch-icon-120x120.png">
