--- a/en/index.html
+++ b/en/index.html
@@ -13,7 +13,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../img/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="76x76" href="../img/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="../img/apple-touch-icon-120x120.png">
@@ -41,6 +41,9 @@
               </li>
               <li class="menu-item">
                 <a href="contact.html">Contact</a>
+              </li>
+              <li class="menu-item">
+                <a href="../es">Español</a>
               </li>
             </ul>
           </nav>
@@ -184,7 +187,7 @@
                 <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div>
-            <div class="widget column four">
+            <div class="widget column four" style="visibility:hidden">
               <h4>Widget</h4>
               <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
             </div>
