--- a/en/index.html
+++ b/en/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="DESCRIPCION SEO AQUI">
-    <title>EventCenter – TITULO SEO AQUI</title>
+    <meta name="description" content="EventCenter does all the content, apps, videos, websites, infographics you need to have a long lasting impact with your event.">
+    <title>EventCenter – Digital solutions for events</title>
     <link rel="stylesheet" href="../css/layers.min.css" media="screen">
     <link rel="stylesheet" href="../css/font-awesome.min.css" media="screen">
     <link rel="stylesheet" href="../css/style.css" media="screen">
@@ -18,6 +18,22 @@
     <link rel="apple-touch-icon" sizes="76x76" href="../img/apple-touch-icon-76x76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="../img/apple-touch-icon-120x120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="../img/apple-touch-icon-152x152.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@eventcenter">
+    <meta name="twitter:image:src" content="http://eventcenter.co/img/schedule-1.png">
+    <meta name="twitter:title" content="EventCenter, digital solutions for events">
+    <meta name="twitter:description" content="EventCenter does all the content, apps, videos, websites, infographics you need to have a long lasting impact with your event.">
+
+    <!-- Facebook -->
+    <meta property="og:locale" content="es_LA">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="EventCenter, digital solutions for events">
+    <meta property="og:site_name" content="EventCenter">
+    <meta property="og:url" content="http://eventcenter.co/en/">
+    <meta property="og:image" content="http://eventcenter.co/img/schedule-1.png">
+    <meta property="og:description" content="EventCenter does all the content, apps, videos, websites, infographics you need to have a long lasting impact with your event.">
   </head>
 
   <body class="page">
